# tensorboard-remote

./: README.md  pyproject.toml  pyproject.toml~  run_tensorboard.sh
