[project]
name = "tensorboard_remote"
version = "0.1.0"
description = ""
authors = [
    {name = "ISHITSUKA Hikaru",email = "h.ishitsuka@idein.jp"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tensorboard (>=2.19.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
